# Gridlock-Gurus

./: ;  BrickFactory.cpp  BrickFactory.h  Broken.h  BudgetDepartment.cpp  BudgetDepartment.h  BuildCommand.cpp  BuildCommand.h  Building.cpp  Building.h  BuildingCollection.cpp  BuildingCollection.h  BuildingFactory.h  BuildingIterator.h  CMakeLists.txt  Citizen.cpp  Citizen.h  CitizenFactory.cpp  CitizenFactory.h  CitizenIterator.h  City.cpp  City.h  CityBuilder.h  Command.cpp  Command.h  Commercial.cpp  Commercial.h  CommercialFactory.h  Damaged.h  DepartmentOfHomeAffairs.h  DepartmentOfWaterAndSanitation.h  DepartmentOfWaterPowerAndSanitation.h  Director.h  EducationService.h  EducationState.h  Factory.h  FactoryFactory.h  FlatTaxStrategy.cpp  FlatTaxStrategy.h  Functional.h  (+55 more)
.github/workflows/: ci-pipeline.yml
headers/: BrickFactory.h  BrokenState.h  BudgetDepartment.h  BuildCommand.h  Building.h  BuildingCollection.h  BuildingFactory.h  BuildingIterator.h  BuildingType.h  ChangeTaxStrategyCommand.h  Citizen.h  CitizenFactory.h  CitizenIterator.h  CitizenType.h  City.h  CityBuilder.h  CityReportCommand.h  Command.h  Commercial.h  CommercialFactory.h  DepartmentOfHomeAffairs.h  DepartmentOfWaterPowerAndSanitation.h  Director.h  EducationService.h  EducationState.h  Factory.h  FactoryFactory.h  FlatTaxStrategy.h  FunctionalState.h  Government.h  HealthService.h  HealthState.h  HighFundingEducationState.h  HighFundingState.h  IncreaseTransport.h  IncreaseTransportCommand.h  Landmark.h  LandmarkFactory.h  LowFundingEducationState.h  LowFundingState.h  (+34 more)
src/: BrickFactory.cpp  BrokenState.cpp  BudgetDepartment.cpp  BuildCommand.cpp  Building.cpp  BuildingCollection.cpp  BuildingIterator.cpp  ChangeTaxStrategyCommand.cpp  Citizen.cpp  CitizenFactory.cpp  City.cpp  Command.cpp  Commercial.cpp  CommercialFactory.cpp  DepartmentOfHomeAffairs.cpp  DepartmentOfWaterPowerAndSanitation.cpp  EducationService.cpp  Factory.cpp  FactoryFactory.cpp  FlatTaxStrategy.cpp  FunctionalState.cpp  Government.cpp  HealthService.cpp  HighFundingEducationState.cpp  HighFundingState.cpp  IncreaseTransport.cpp  IncreaseTransportCommand.cpp  LandmarkFactory.cpp  LowFundingEducationState.cpp  LowFundingState.cpp  Main.cpp  NameGenerator.cpp  PeaceState.cpp  PoliceService.cpp  PolicyCommand.cpp  Power.cpp  ProgressiveTaxStrategy.cpp  RepairUtilitiesCommand.cpp  ResetCommand.cpp  Residential.cpp  (+19 more)
src/temp/: CitizenFactory.cpp
tests/: building_test.cpp  citizen_test.cpp  government_tests.cpp  tax_system_test.cpp  transport-test.cpp  transport_test.cpp  utilities_test.cpp
