cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(Gridlock-Gurus BrickFactory.h
        main.cpp
        Broken.h
        BudgetDepartment.h
        BuildCommand.h
        Building.h
        BuildingCollection.h
        BuildingFactory.h
        BuildingIterator.h
        Citizen.h
        CitizenFactory.h
        CitizenIterator.h
        City.h
        CityBuilder.h
        Command.h
        Commercial.h
        CommercialFactory.h
        Damaged.h
        DepartmentOfHomeAffairs.h
        DepartmentOfWaterPowerAndSanitation.h
        Director.h
        EducationService.h
        EducationState.h
        Factory.h
        FactoryFactory.h
        FlatTaxStrategy.h
        Functional.h
        Government.h
        HealthService.h
        HealthState.h
        HighFundingEducationState.h
        HighFundingState.h
        Landmark.h
        LandmarkFactory.h
        LowFundingEducationState.h
        LowFundingState.h
        PeaceState.h
        PoliceService.h
        PoliceState.h
        PolicyCommand.h
        Power.h
        ProgressiveTaxStrategy.h
        Residential.h
        ResidentialFactory.h
        Resources.h
        Sanitation.h
        Service.h
        ServiceFactory.h
        Simulation.h
        SteelFactory.h
        TaxAuthority.h
        TaxCommand.h
        Taxi.h
        TaxStrategy.h
        Train.h
        TransportDepartment.h
        TransportState.h
        Truck.h
        UnrestState.h
        Utilities.h
        Vehicle.h
        Water.h
        WoodFactory.h
        BuildingFactory.cpp
        Building.cpp
        Residential.cpp
        Citizen.cpp
        Landmark.cpp
        EducationService.cpp
        Service.cpp
        HealthService.cpp
        PoliceService.cpp
        PoliceState.cpp
        UnrestState.cpp
        PeaceState.cpp
        HighFundingState.cpp
        HealthState.cpp
        LowFundingState.cpp
        HighFundingEducationState.cpp
        LowFundingEducationState.cpp
        EducationState.cpp
        Factory.cpp
        BrickFactory.cpp
        SteelFactory.cpp
)
